--- a/docs/init.adoc
+++ b/docs/init.adoc
@@ -12,3 +12,12 @@ pmpm i @nrwl/nx-plugin
 
 pnpm install --save-dev @nx/nest
 pnpm install --save-dev @nx/node
+
+pnpm add @nestjs/common
+pnpm add @nestjs/core
+
+___
+
+nx/node
+
+webpack
