add spring boot project and module generator
* init module

* config test

* [W] add backend java

* [W] init module

* [W] add config for run

* [W] add nx plugin

* [W] init generator

* [W] add base generator

* [W] add template generator and prisma db

* fix deps

* fix generator

--- a/docs/init.adoc
+++ b/docs/init.adoc
@@ -12,3 +12,18 @@ pmpm i @nrwl/nx-plugin
 
 pnpm install --save-dev @nx/nest
 pnpm install --save-dev @nx/node
+
+pnpm add @nestjs/common
+pnpm add @nestjs/core
+
+___
+
+nx/node
+
+webpack
+
+
+pnpm add @prisma/client
+pnpm add dotenv-flow
+pnpm add dotenv-flow-cli
+pnpm add -D prisma
